# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2015-11-21 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Set max configured service processes to 1 due to port ownership for
      cloudi_service_http_cowboy, cloudi_service_http_elli,
      cloudi_service_tcp, cloudi_service_udp
    * Add the timeout_terminate service configuration option
    * Always have an empty space in the logging source output when the
      function name/arity is not provided
    * Update trie

2015-11-10 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Changes to abide by EEP45
        * FUNCTION macro was changed to FUNCTION_NAME
        * FUNCTION_ARITY macro was changed to only be the function arity
    * Fix ERLANG_OTP_VERSION macros used for integration test compilation
    * Added logging parameters for function and arity to make logging of the
      function data easy
    * Fix lager metadata pid to be a string to match the lager parse transform

2015-11-04 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add cloudi_service:monitor/2 for monitoring
      Erlang processes in an Erlang CloudI service
    * Add cloudi_service:demonitor/2 and
      cloudi_service:demonitor/3 for removing a monitor
      in an Erlang CloudI service
    * Add cloudi_service_http_rest info function configuration argument

2015-11-03 Dmitriy Mazurin <dimas.m.19 [at] gmail (dot) com>

    * Update erlang_term to fix improper list size check

2015-10-27 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add comment to cloudi_service_http_rest

2015-10-24 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add query_get_format configuration argument to both
      cloudi_service_http_cowboy and cloudi_service_http_elli
      with the default set to 'raw' (to get the previous default behavior,
      set to 'text_pairs')
    * Update backward-cpp
    * Add basic comments to cloudi_service_http_rest

2015-10-08 Michael Truog   <mjtruog [at] gmail (dot) com>
